哪个 配置实时刷新

--- a/.gitignore
+++ b/.gitignore
@@ -1,171 +1,25 @@
-
-springmvc/Spring4MVCCRUDRestService/\.classpath
-
-springmvc/Spring4MVCCRUDRestService/\.mymetadata
-
-springmvc/Spring4MVCCRUDRestService/\.project
-
-springmvc/Spring4MVCCRUDRestService/\.settings/
-
-springmvc/Spring4MVCCRUDRestService/target/
-
-swagger2test/test1/\.project
-
-swagger2test/test1/\.classpath
-
-swagger2test/test1/\.settings/
-
-apollotest/test1/\.settings/
-
-apollotest/test1/\.classpath
-
-apollotest/test1/\.project
-
-apollotest/test1/target/
-
-apollotest/test2/\.project
-
-apollotest/test2/\.settings/
-
-apollotest/test2/zookeeperclient/\.settings/
-
-apollotest/test2/zookeeperclient/\.classpath
-
-apollotest/test2/zookeeperclient/\.project
-
-apollotest/test2/zookeeperservice/\.settings/
-
-apollotest/test2/zookeeperservice/\.classpath
-
-apollotest/test2/zookeeperservice/\.project
-
-springboottest/springboottest3/\.settings/
-
-springboottest/springboottest3/\.classpath
-
-springboottest/springboottest3/\.project
-
-springboottest/springboottest4/\.settings/
-
-springboottest/springboottest4/\.classpath
-
-springboottest/springboottest4/\.project
-
-springboottest/springboottest5/\.settings/
-
-springboottest/springboottest5/\.classpath
-
-springboottest/springboottest5/\.project
-
-springboottest/springboottest6/\.settings/
-
-springboottest/springboottest6/\.classpath
-
-springboottest/springboottest6/\.project
-springboottest/springboottest8/.settings/org.eclipse.core.resources.prefs
-springboottest/springboottest8/.settings/org.eclipse.jdt.core.prefs
-springboottest/springboottest8/.settings/org.eclipse.m2e.core.prefs
-springtest/test24/testmvchelloworld/.settings/.jsdtscope
-springtest/test24/testmvchelloworld/.settings/org.eclipse.jdt.core.prefs
-springtest/test24/testmvchelloworld/.settings/org.eclipse.m2e.core.prefs
-springtest/test24/testmvchelloworld/.settings/org.eclipse.wst.common.component
-springtest/test24/testmvchelloworld/.settings/org.eclipse.wst.common.project.facet.core.xml
-springtest/test24/testmvchelloworld/.settings/org.eclipse.wst.jsdt.ui.superType.container
-springtest/test24/testmvchelloworld/.settings/org.eclipse.wst.jsdt.ui.superType.name
-springtest/test24/testmvchelloworld/.settings/org.eclipse.wst.validation.prefs
-springboottest/springboottest8/.idea/.name
-springboottest/springboottest8/.idea/compiler.xml
-springboottest/springboottest8/.idea/encodings.xml
-springboottest/springboottest8/.idea/misc.xml
-springboottest/springboottest8/.idea/modules.xml
-springboottest/springboottest8/.idea/workspace.xml
-springboottest/springboottest8/.idea/libraries/Maven__ch_qos_logback_logback_classic_1_1_11.xml
-springboottest/springboottest8/.idea/libraries/Maven__ch_qos_logback_logback_core_1_1_11.xml
-springboottest/springboottest8/.idea/libraries/Maven__com_fasterxml_classmate_1_3_3.xml
-springboottest/springboottest8/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_annotations_2_8_8.xml
-springboottest/springboottest8/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_core_2_8_8.xml
-springboottest/springboottest8/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_databind_2_8_8.xml
-springboottest/springboottest8/.idea/libraries/Maven__javax_validation_validation_api_1_1_0_Final.xml
-springboottest/springboottest8/.idea/libraries/Maven__junit_junit_4_12.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_core_8_5_15.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_el_8_5_15.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_websocket_8_5_15.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_hibernate_hibernate_validator_5_2_5_Final.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_3_1_Final.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_slf4j_jcl_over_slf4j_1_7_25.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_slf4j_jul_to_slf4j_1_7_25.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_slf4j_log4j_over_slf4j_1_7_25.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_boot_spring_boot_1_4_7_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_boot_spring_boot_devtools_1_4_7_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_1_4_7_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_logging_1_4_7_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_tomcat_1_4_7_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_web_1_4_7_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_spring_aop_4_3_9_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_spring_beans_4_3_9_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_spring_context_4_3_9_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_spring_core_4_3_9_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_spring_expression_4_3_9_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_spring_web_4_3_9_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_springframework_spring_webmvc_4_3_9_RELEASE.xml
-springboottest/springboottest8/.idea/libraries/Maven__org_yaml_snakeyaml_1_17.xml
-springboottest/springboottest9/.idea/.name
-springboottest/springboottest9/.idea/compiler.xml
-springboottest/springboottest9/.idea/encodings.xml
-springboottest/springboottest9/.idea/misc.xml
-springboottest/springboottest9/.idea/modules.xml
-springboottest/springboottest9/.idea/workspace.xml
-springboottest/springboottest9/.idea/libraries/Maven__ch_qos_logback_logback_classic_1_1_11.xml
-springboottest/springboottest9/.idea/libraries/Maven__ch_qos_logback_logback_core_1_1_11.xml
-springboottest/springboottest9/.idea/libraries/Maven__com_fasterxml_classmate_1_3_3.xml
-springboottest/springboottest9/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_annotations_2_8_8.xml
-springboottest/springboottest9/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_core_2_8_8.xml
-springboottest/springboottest9/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_databind_2_8_8.xml
-springboottest/springboottest9/.idea/libraries/Maven__javax_validation_validation_api_1_1_0_Final.xml
-springboottest/springboottest9/.idea/libraries/Maven__junit_junit_4_12.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_core_8_5_15.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_el_8_5_15.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_apache_tomcat_embed_tomcat_embed_websocket_8_5_15.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_hibernate_hibernate_validator_5_2_5_Final.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_3_1_Final.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_slf4j_jcl_over_slf4j_1_7_25.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_slf4j_jul_to_slf4j_1_7_25.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_slf4j_log4j_over_slf4j_1_7_25.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_boot_spring_boot_1_4_7_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_boot_spring_boot_devtools_1_4_7_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_1_4_7_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_logging_1_4_7_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_tomcat_1_4_7_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_boot_spring_boot_starter_web_1_4_7_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_spring_aop_4_3_9_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_spring_beans_4_3_9_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_spring_context_4_3_9_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_spring_core_4_3_9_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_spring_expression_4_3_9_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_spring_web_4_3_9_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_springframework_spring_webmvc_4_3_9_RELEASE.xml
-springboottest/springboottest9/.idea/libraries/Maven__org_yaml_snakeyaml_1_17.xml
-javabasicstest/test29/.idea/.name
-javabasicstest/test29/.idea/compiler.xml
-javabasicstest/test29/.idea/encodings.xml
-javabasicstest/test29/.idea/kotlinc.xml
-javabasicstest/test29/.idea/misc.xml
-javabasicstest/test29/.idea/modules.xml
-javabasicstest/test29/.idea/workspace.xml
-javabasicstest/test29/.idea/libraries/Maven__joda_time_joda_time_2_6.xml
-javabasicstest/test29/.idea/libraries/Maven__junit_junit_3_8_1.xml
-javabasicstest/test30/.idea/.name
-javabasicstest/test30/.idea/compiler.xml
-javabasicstest/test30/.idea/encodings.xml
-javabasicstest/test30/.idea/misc.xml
-javabasicstest/test30/.idea/modules.xml
-javabasicstest/test30/.idea/workspace.xml
-javabasicstest/test30/.idea/libraries/Maven__junit_junit_3_8_1.xml
-
-springboottest/springboottest10/\.idea/
-
-springboottest/springboottest10/springboottest1\.iml
+# Eclipse
+.metadata/
+.recommenders/
+RemoteSystemsTempFiles/
+Servers/
+**/target/
+**／.DS_Store
+**/.settings
+**/.classpath
+**/.project
+**/.externalToolBuilders
+**/.pmd
+**/.checkstyle
+**/*.bpmn2d
+settings.xml
+**/pom.xml.versionsBackup
+# idea
+.idea/
+**/*.iml
+.flattened-pom.xml
+# Others
+node_modules/
+**/MANIFEST.MF
+**/logs
+**/LOG_PATH_IS_UNDEFINED
