--- a/apollotest/test1/pom.xml
+++ b/apollotest/test1/pom.xml
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.7.RELEASE</version>
+		<version>2.1.0.RELEASE</version>
 	</parent>
 
 	<dependencies>
@@ -43,10 +43,15 @@
 		<dependency>
 			<groupId>com.ctrip.framework.apollo</groupId>
 			<artifactId>apollo-client</artifactId>
-			<version>0.8.0</version>
+			<version>1.1.1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<!-- Package as an executable jar -->
 	<build>
