--- a/apollotest/test1/src/main/resources/application.properties
+++ b/apollotest/test1/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #thymeleaf start
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
 #\u5f00\u53d1\u65f6\u5173\u95ed\u7f13\u5b58,\u4e0d\u7136\u6ca1\u6cd5\u770b\u5230\u5b9e\u65f6\u9875\u9762
 spring.thymeleaf.cache=false
 #thymeleaf end
 server.port=8081
+apollo.meta=http://10.139.33.158:17986
+logging.level.root=Debug
